# dial-platform-course-for-developers

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: api-keys-and-roles.json  applications.json  models-keys.example.json  models.json
tasks/t10_agent/app/: agent.py  app.py
tasks/t10_agent/app/tools/: base.py  models.py
tasks/t10_agent/app/tools/deployment/: base.py  essay_generation_tool.py  image_generation_tool.py  microwave_rag_tool.py
tasks/t1_start_platform/: README.md
tasks/t2_add_models/: README.md
tasks/t2_add_models/optional_task/azure_openai/: setup_azure_models.md
tasks/t2_add_models/optional_task/bedrock/: setup_bedrock_models.md
tasks/t2_add_models/optional_task/vertexai/: setup_vertexai-models.md
tasks/t3_add_applications/: README.md
tasks/t3_add_applications/echo/: echo_app.py
tasks/t3_add_applications/essay/: app_gpt.py  app_sonnet.py  essay_assistant.py
tasks/t4_stage_and_state/: README.md
tasks/t4_stage_and_state/t1_simple/: poem_assistant.py
tasks/t4_stage_and_state/t2_calculator_agent/: agent.py  app.py  calculator_tool.py
tasks/t5_files/: README.md  files_assistant.py
tasks/t6_embeddings_and_frameworks/: README.md  rag_app.py
tasks/t7_buttons/: README.md  button_driven_conversation.py
tasks/t8_agent/: README.md
tasks/t8_agent/app/: agent.py  app.py  utils.py
tasks/t8_agent/app/tools/: base.py
tasks/t8_themes/: README.md  themes-config.json
tasks/t_extra_1_themes/: README.md
tasks/t_extra_2_chat_overlay/: README.md
(+4 files in other folders)
